# ata

./: pyproject.toml
src/ata/: __init__.py  __main__.py
